--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "nativewind": "^2.0.11",
     "react": "18.1.0",
     "react-native": "0.70.3",
-    "react-native-gesture-handler": "^2.8.0",
+    "react-native-gesture-handler": "2.8.0",
+    "react-native-image-colors": "1.5.1",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
@@ -31,7 +32,7 @@
     "@types/jest": "^26.0.23",
     "@types/react": "^18.0.21",
     "@types/react-native": "^0.70.4",
-    "@types/react-native-snap-carousel": "^3.8.5",
+    "@types/react-native-snap-carousel": "3.8.5",
     "@types/react-native-vector-icons": "^6.4.12",
     "@types/react-test-renderer": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
